Fix flex boxes alignment on contribute page
The boxes with just p inside were not aligned correctly.

Fixes #529

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -2670,7 +2670,8 @@ h2.section-title.hp-style {
   font-weight: 400;
 }
 
-.contribution-list .box ul {
+.contribution-list .box ul,
+.contribution-list .box p {
   margin: 0 25px 35px 0;
   padding: 0;
   list-style: none;
