--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -2670,7 +2670,8 @@ h2.section-title.hp-style {
   font-weight: 400;
 }
 
-.contribution-list .box ul {
+.contribution-list .box ul,
+.contribution-list .box p {
   margin: 0 0 35px 25px;
   padding: 0;
   list-style: none;
